--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>What should I do next?</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
-  </head>
-  <body>
-    <h1>What should I do next?</h1>
 
-    <ul id="project-list">
-      <li>ArticSidekick</li>
-      <li>Mystrika</li>
-      <li>Aladdin</li>
-      <li>Pixalot</li>
-      <li>O'Reilly</li>
-      <li>Mechanical Ink Studio</li>
-      <li>Project Calavera</li>
-      <li>Ourbackyard</li>
-      <li>DeveloperToolchest</li>
-      <li>IndieCaster</li>
-      <li>Deep Dive into HTML: A Comprehensive Handbook</li>
-      <li>Minimalist</li>
-    </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>What should I do next?</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+</head>
 
+<body>
+  <h1>What should I do next?</h1>
+
+  <p id="items-list-empty">You have no projects or tasks. Add you first one!</p>
+
+  <form id="add-item-form" name="add-item-form" action="/" method="post">
+    <label for="item-name">Add a project or task:</label>
+    <input type="text" id="item-name" name="item-name" required />
+    <button type="submit">Add Item</button>
+  </form>
+
+  <div class="hidden" id="items-list-container">
+    <ul id="items-list"></ul>
     <button id="highlight-project" type="button">What should I do next?</button>
+  </div>
 
-    <script defer src="./js/main.js"></script>
-  </body>
+  <script defer src="./js/main.js"></script>
+</body>
+
 </html>
